# ConvertApi

./: .gitignore  CMakeLists.txt  build.sh  publish.sh
src/: cors_middleware.cpp  cors_middleware.hpp  file_format.cpp  file_format.hpp  libreoffice_service.cpp  libreoffice_service.hpp  logger.hpp  main.cpp  prim_exception.hpp  utility.hpp
